2017-01-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/xmlutils.c: Update filename in documentation as well.

2017-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* osp/osp.c, osp/osp.h, osp/CMakeLists.txt, osp/libgvm_osp.pc.in: New.
	Moved here from openvas-libraries.

	* CMakeLists.txt: Added handling of "osp".

2017-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/libgvm_util.pc.in: Remove gpgme from 'Requires.private',
	libgpgme does not support pkg-config.

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/xmlutils.c, util/xmlutils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "xmlutils".

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/serverutils.c, util/serverutils.h, util/compressutils.c,
	util/compressutils.h, util/fileutils.c, util/fileutils.h: Fixed
	library name.

	* util/libgvm_util.pc.in: Added gnutls and gpgme.

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/serverutils.c, util/serverutils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "serverutils". Check for
	gnutls library.

	* INSTALL: Add gnutls library as dependency.

2017-01-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/CMakeLists.txt: Improve check for gpgme library. Make it
	possible to set a minimum required version. Make sure version
	requirements are satisfied. Make output more usable and consistent. Do
	not try to determine flags for gpgme if it was not found.

2017-01-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/gpgmeutils.c, util/gpgmeutils.h: New. Moved here from
	openvas-libraries. Reduced to only offer gvm_init_gpgme_ctx_from_dir().

	* util/CMakeLists.txt: Handle new module "gpgmeutils". Check for
	gpgme library.

	* INSTALL: Add gpgme library as dependency.

2017-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
