@@ -6,6 +6,6 @@ includedir=@INCLUDEDIR@
 Name: gvmlibs-util
 Description: Greenbone Vulnerability Management Library util
 Version: @LIBGVMCONFIG_VERSION@
-Requires.private: glib-2.0 >= 2.42.1, gio-2.0 >= 2.42.1, zlib >= 1.2.8, gnutls >= 3.2.15
+Requires.private: glib-2.0 >= 2.42.1, gio-2.0 >= 2.42.1, zlib >= 1.2.8, gnutls >= 3.2.15, uuid >= 2.25.0
 Cflags: -I${includedir} -I${includedir}/gvm
 Libs: -L${libdir} -lgvm_util
